mangosdk/src/test/resources/valid/ProvidesClassTestClass.java
import org.mangosdk.spi.ProviderFor;

@ProviderFor(Object.class)
public class ProvidesClassTestClass {
	
}
