mangosdk/src/test/resources/invalid/InterfaceTestClass.java
import java.util.RandomAccess;

import org.mangosdk.spi.ProviderFor;

@ProviderFor(RandomAccess.class)
public interface InterfaceTestClass extends RandomAccess {
	
}
